--- a/Clash/config/ACL4SSR_Online.ini
+++ b/Clash/config/ACL4SSR_Online.ini
@@ -14,6 +14,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/innocnet/ACL4SSR/mas
 ruleset=🛑 全球拦截,https://raw.githubusercontent.com/innocnet/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/innocnet/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/innocnet/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=💬 OpenAi,https://raw.githubusercontent.com/innocnet/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/innocnet/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/innocnet/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/innocnet/ACL4SSR/master/Clash/Microsoft.list
